[metadata]
name             = zilean
version          = attr: zilean.__version__
author           = Zhihao (Johnson) Du
author_email     = johnsondzh@gmail.com
description      = A package that manipulates data for forest fire classification. 
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = league-of-legends, machine-learning, data-analysis
license          = MIT License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
	tqdm
    pandas

[options.packages.find]
exclude =
    examples*
    docs*